--- a/morpion/Jeu_morpion.html
+++ b/morpion/Jeu_morpion.html
@@ -30,7 +30,7 @@
           </tr>
         </table>
       <div id="scores">
-        <p id="nbMatches"><span id="nbMatchesCount">1</span> manches</p>
+        <p id="nbMatches">manches <span id="nbMatchesCount">1</span></p>
         <p class="scores-title">Scores</p>
         <p id="player1" class="player1"><strong>O</strong> Joueur 1 : <span id="score1">0</span></p>
         <p id="player2" class="player2"><strong>X</strong> Joueur 2 : <span id="score2">0</span></p>  
