--- a/movies/popular_movies.html
+++ b/movies/popular_movies.html
@@ -14,7 +14,7 @@
 
     </header>
     <main>
-        <h1 class="center">LES MEILLEURES FILMS</h1>
+        <h1 class="center flex">LES MEILLEURES FILMS</h1>
         <div id="allMovies">
 
         </div>
